:bug: coreection bug

--- a/sass/style.css
+++ b/sass/style.css
@@ -561,5 +561,8 @@ section {
     transform: translateY(0%);
   }
 }
+#loom-companion-mv3 {
+  display: none !important;
+}
 
 /*# sourceMappingURL=style.css.map */
