:rocket: new modifs

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -63,7 +63,7 @@ section{
     .img{
         width: 40%;
         height: 100%;
-        background-image: url("img/alpes.png");
+        background-image: url("img/Bdx.png");
         width: 65%;
         background-position: right;
         background-size: contain;
@@ -71,9 +71,18 @@ section{
         background-attachment: fixed;
     }
     .text{
-        height: 80%;
+        height: 100%;
         width: 50%;
         color: $interColor;
+        display: flex;
+        flex-direction: column;
+        gap: 4rem;
+        justify-content: flex-end;
+        font-weight: 200;
+        span{
+            color: #0008ff;
+            font-weight: 400;
+        }
         h1{
             color:$interColor;
             font-size: 160px;
@@ -123,7 +132,7 @@ section{
         background-size: cover;
         .img1, .img2, .img3, .img4, .img5, .img6{
             transition-duration: 1s;
-            height: 60vh;
+            height: 55vh;
             width: 55vw;
             background-position: center;
             background-size: cover;
@@ -152,7 +161,7 @@ section{
             font-size: 20px;
             line-height: 120px;
             color: #0008ff;
-            font-family: roc grotesk;
+            font-family: "roc-grotesk", sans-serif;
             font-weight: 300;
             z-index: 1005;
             text-transform: uppercase;
@@ -165,7 +174,7 @@ section{
             font-size: 32px;
             line-height: 120px;
             color: #0008ff;
-            font-family: roc grotesk;
+            font-family: "roc-grotesk", sans-serif;
             font-weight: 300;
             text-transform: uppercase;
             z-index: 5;
@@ -175,7 +184,7 @@ section{
         p{
             text-align: center;
             color: #0008ff;
-            font-family: roc grotesk;
+            font-family: "roc-grotesk", sans-serif;
             font-size: 24px;
             align-items: end;
             > span{
@@ -225,7 +234,7 @@ section{
                 top: 42%;
                 left: 50%;
                 transform: translate(-50%,-50%);
-                font-family: roc grotesk , sans-serif;
+                font-family: "roc-grotesk", sans-serif , sans-serif;
                 font-size: 224px;
                 font-weight: 800;
                 color: black;
@@ -237,7 +246,7 @@ section{
                 top: 45%;
                 left: 50%;
                 transform: translate(-50%,-50%);
-                font-family: Flood Std;
+                font-family: "flood-std", sans-serif;
                 font-size: 344px;
                 font-weight: 300;
                 color: #0008ff;
@@ -266,7 +275,7 @@ section{
         font-weight: 500;
         margin: 20px 0;
         color: black;
-        font-family: roc grotesk;
+        font-family: "roc-grotesk", sans-serif;
     }
     .HomeBackground .scrollInstruction{
         display: flex;
@@ -318,7 +327,7 @@ section{
             justify-content: start;
             z-index: 5;
             h2{
-                font-family: roc grotesk;
+                font-family: "roc-grotesk", sans-serif;
                 font-weight: 500;
                 font-size: 96px;
                 text-align: start;
@@ -361,40 +370,39 @@ section{
     }
 .text{
     width: 35%;
-    padding: 0 0 14% 7%;
+    padding: 0 7% 0% 7%;
     color: black;
-    font-family: roc grotesk;
+    font-family: "roc-grotesk", sans-serif;
     font-size: 24px;
     display: flex;
     align-items: end;
-    span{
-        color: #0008ff;
-    }
+    
 }
 .Tech{
-    height: 100vh;
     display: flex;
+    height: 20vh !important;
     gap: 10%;
     justify-content: center;
     align-items: center;
-    position: relative;
     flex-direction: column;
     pre{
         font-size: 24px !important;
-        width: 100%;
+        width: 50%;
+        transform: translateX(-30%);
     }       
     p{
         color: black;
-        font-family: roc grotesk;
+        font-family: "roc-grotesk", sans-serif;
         font-size: 24px;
-        display: flex;
-        align-items: end;
         width: 100%;
         text-align: center;
+        span{
+            color: #0008ff;
+        }
     }
 }
 .Dtext{
-    height: 130vh;
+    height: 80vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -411,7 +419,7 @@ section{
         gap: 40px;
     }
     .btn3d {
-        font-family: roc grotesk;
+        font-family: "roc-grotesk", sans-serif;
         font-size: 104px;
         width: $btn-width;
         height: $btn-height;
@@ -441,10 +449,13 @@ section{
                 text-decoration:none; 
                 background-color: var(--white);
                 font-weight: 600;
-                font-family: roc grotesk;
+                font-family: "roc-grotesk", sans-serif;
             }
         }
     }
+}
+.knowMoreButton{
+    cursor: pointer;
 }
 .About3D2{
     padding: 7% 0;
@@ -468,7 +479,7 @@ section{
     clip-path: ellipse(50% 12% at 50% 75%);
 }
 // .counter{
-//     font-family: roc grotesk;
+//     font-family: "roc-grotesk", sans-serif;
 //     color: #1400FF;
 //     font-size: 21px;
 //     position: absolute;
@@ -488,6 +499,7 @@ section{
     // background-image: url("img/bruit.png");
     background-position: bottom;
     background-size: cover;
+    height: 20vh !important;
   }
 
 @keyframes scrolling{
@@ -511,23 +523,24 @@ section{
     justify-content: center;
     flex-direction: column;
     padding: 0 7%;
+    gap: 2rem;
     width: auto;
     p{
         color: var(--white);
-        font-family: roc grotesk;
+        font-family: "roc-grotesk", sans-serif;
         font-size: 24px;
         text-align: start;
         font-weight: 300;
     }
     h2{
         color: var(--white);
-        font-family: roc grotesk;
+        font-family: "roc-grotesk", sans-serif;
         font-weight: 500;
         font-size: 96px;
     }
     h3{
         color: var(--white);
-        font-family: roc grotesk;
+        font-family: "roc-grotesk", sans-serif;
         font-weight: 500;
         font-size: 34px;
     }
@@ -543,10 +556,3 @@ section{
         transform: translateY(0%);
     }
 } 
-
-
-
-
-#loom-companion-mv3{
-    display: none !important;
-}
