--- a/sass/style.scss
+++ b/sass/style.scss
@@ -548,6 +548,9 @@ section{
         text-decoration: none;
     }
 }
+.shadow-host-companion{
+    display: none !important;
+}
 @keyframes spanFadeIn{
     0%{
         transform : translateY(100%);
