:bug: i thougt it was, know it is

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -548,7 +548,7 @@ section{
         text-decoration: none;
     }
 }
-.shadow-host-companion{
+#shadow-host-companion{
     display: none !important;
 }
 @keyframes spanFadeIn{
