--- a/style.css
+++ b/style.css
@@ -566,6 +566,10 @@ section {
   text-decoration: none;
 }
 
+#shadow-host-companion {
+  display: none !important;
+}
+
 @keyframes spanFadeIn {
   0% {
     transform: translateY(100%);
